hphp/test/zend/good/ext-date/microtime_basic.php
<?php
/* 
 * proto mixed microtime([bool get_as_float])
 * Function is implemented in ext/standard/microtime.c
*/ 

var_dump(microtime());
var_dump(microtime(true));
var_dump(microtime(false));

?>
===DONE===